--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span>TI VOGLIO BENE</span>
     </div>
     <div class="button">
-        <a href="flower.html" class="button1">NEVER FORGET</a>
+        <a href="flower.html" class="button1">NEVER APART</a>
     </div>
 </body>
 </html>
