--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <link href="https://fonts.cdnfonts.com/css/bimbo" rel="stylesheet">
     <title>Flowers</title>
 </head>
 <body>
@@ -14,14 +15,15 @@
         <span>I</span>
         <span>A</span>
         <span>O</span>
+        <span>&nbsp;</span> 
         <span>T</span>
         <span>O</span>
         <span>P</span>
         <span>A</span>
     </div>
     <br> <br>
-    <div class="description">
-        <span>TI VOGLIO BENE</span>
+    <div class="description" style="font-family: 'Bimbo'">
+        TI VOGLIO BENE
     </div>
     <div class="button">
         <a href="flower.html" class="button1">NEVER APART</a>
