--- a/flower.html
+++ b/flower.html
@@ -27,7 +27,7 @@
 </head>
 <body class="container">
     <!-- Testo -->
-    <div class="text-container">
+    <div class="text-container" style="font-family: Verdana">
         <p>From the moment I met you, my world has been filled with an indescribable joy and a love so profound that every moment with you feels like a beautiful dream.<br> <br>
           I can't wait to spend a lifetime making those dreams our reality, where our love grows stronger each day and our future is filled with<br>
           endless happiness and cherished memories</p>    
